--- a/test.html
+++ b/test.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-
-
+<body>
   <div class='main'>
     <div class='main_left'>
       <figure>
@@ -35,8 +34,7 @@
       </div>
     </div>
   </div>
-
-<body>
-  
 </body>
+<script src="script.js"></script>
+
 </html>
